[package]
name = "ssstretch"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for the Signalsmith Audio DSP library including time-stretching, pitch-shifting, filters, FFT and more"
license = "MIT"
repository = "https://github.com/bmisiak/ssstretch"
readme = "README.md"
authors = ["Brian Misiak"]
keywords = ["audio", "stretch", "dsp", "pitch-shift", "signal-smith"]
categories = ["external-ffi-bindings", "multimedia::audio", "multimedia"]

[dependencies]
cxx = "1.0"
num-complex = "0.4"
rustfft = { version = "6", optional = true }
realfft = { version = "3", optional = true }

[build-dependencies]
cxx-build = "1.0"

[features]
default = []
fft-rust = ["rustfft", "realfft"]

[[example]]
name = "fft_example"
path = "examples/fft_example.rs"
required-features = ["fft-rust"]
